# orocos_test_comp

./: .gitignore  CMakeLists.txt  libraries.txt  readme.md  start.ops
include/: orocos_test_comp.hpp
src/: orocos_test_comp.cpp
